[package]
name = "rlbot_flat"
version.workspace = true
edition = "2024"
license-file.workspace = true

[dependencies]
planus = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
serde = { version = "1.0.210", features = ["derive"] }
glam = { version = "0.30.0", optional = true }
ts-rs = { version = "11.1.0", optional = true }

[build-dependencies]
planus-translation = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-codegen = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-types = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
eyre = "0.6.12"
fluent-uri = "0.3.2"

[features]
default = ["glam"]
glam = ["dep:glam"]
dts = ["dep:ts-rs"]
